# custom-gemini-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: juan_personal_history.md
docs/: 01_VISION.md  02_FEATURES.md  03_SRS.md
old_attempt/persona/actions/: base.py
old_attempt/persona/actions/final/: base.py
old_attempt/persona/actions/iterative/: base.py
old_attempt/persona/models/: history.py  persona.py  traits.py
old_attempt/persona/prompts/: master.py  reflection.py  spontaneous_thought.py
src/custom_gemini_bot/: __init__.py  app.py  assistant.py  settings.py  storage.py  telegram.py
src/custom_gemini_cli/: __init__.py  cli.py  config.py  gemini.py  grounding.py  harle.py  memory.py  reasoning.py  runtime_context.py
src/custom_gemini_cli/prompts/: __init__.py  system.py
src/custom_gemini_cli/stores/: __init__.py  file_store.py  protocol.py  sqlite_store.py
src/custom_gemini_cli/tools/: __init__.py  expenses.py  google_sheets.py
src/harle_agent/: __init__.py  agent.py  config.py  environment_knowledge.py  llm_client.py  memory.py  reasoning.py  retry_decorator.py  runtime_context.py  settings.py
src/harle_agent/models/: __init__.py  conversation_record.py  conversation_store.py  harle_models.py  harle_tool.py
src/harle_agent/prompts/: __init__.py  summary.py  system.py
src/harle_agent/stores/: __init__.py  file_store.py  postgres_store.py  protocol.py  sqlite_store.py
src/harle_agent/tools/: __init__.py  expenses.py  google_sheets.py  tools_utils.py
src/harle_agent/tools/expenses/: __init__.py  cons.py  expense_queries.py  google_sheets.py  installments_transaction.py  non_credit_transaction.py  one_time_transaction.py  shared_prompt.py  transaction_updates.py
src/harle_agent/tools/expenses/utils/: __init__.py  constants.py  google_sheets.py  shared_models.py
src/harle_api/: __init__.py  app.py  assistant.py  runtime.py  settings.py  telegram.py
src/harle_cli/: __init__.py  cli.py  config.py
src/harle_utils/: __init__.py  logging.py
