[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-gemini-cli"
version = "0.1.0"
description = "Lightweight Gemini CLI with Google Search grounding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "google-genai",
    "google-auth",
    "gspread",
    "httpx",
    "pydantic",
    "uvicorn",
]

[project.scripts]
gemini = "harle_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel]
entrypoint = "src/harle_api/app.py"
